:recycle: :construction: prepare for receiving wine data over the queue and persisting it